
option java_outer_classname="QueueFullEventResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message QueueFullEventResponse 
{
}